# HomeWork21.2

./: config.py  contacts.html  get_req.py  main_page.html  pyproject.toml
src/: catalog.html  categories.html  get_req.py  main_page.html
