[tool.poetry]
name = "homework21-2"
version = "0.1.0"
description = ""
authors = ["ruslan <ruselkotya@gmail.com>"]
readme = "README.md"
packages = [{include = "homework21"}]

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
